@@ -9,5 +9,6 @@ Bug reports and fixes from:
     Roland Orre
   Bertrand Petit
     Jorgen Schaefer
+    Daniel Skarda
    Bernard Urban
       Lynn Winebarger
